--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "electron-packager": "^12.1.0"
   },
   "dependencies": {
+    "binary-file": "^0.2.1",
     "electron-json-storage": "^4.1.0",
     "electron-localshortcut": "^3.1.0",
     "jquery": "^3.3.1",
